--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ h1 {
     display: flex;
     flex-direction: column;
     gap: 15px;
+    flex-grow: 1;
 }
 
 .tools {
@@ -199,21 +200,6 @@ h1 {
     height: 100%;
     background: white;
     cursor: crosshair;
-}
-
-.text-container {
-    height: 200px;
-    display: none;
-}
-
-#text-area {
-    width: 100%;
-    height: 100%;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    resize: none;
-    font-size: 16px;
 }
 
 .shape-tools {
